--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+reqwest = {version = "0.12.8", optional=true}
 sky_track = {git = "https://github.com/Ahagroen/sky_track"}
+
+[features]
+default = ["get_tle"]
+get_tle = ["dep:reqwest"]
